# msi-fan-control

./: CMakeLists.txt  autocontrol_coolerboost.cbp  autocontrol_coolerboost.depend  autocontrol_coolerboost.layout  main.cpp
src/: defines.h  main.cpp
